pequeña modificacion en la estructura html

--- a/carrito.html
+++ b/carrito.html
@@ -180,21 +180,21 @@
                                                         </tr>
                                                         <tr>
                                                             <td class="hidden-xs">
-                                                                <input type="radio" name="entrega" value="10" id="op_dry_1" required>
+                                                                <input type="radio" name="entrega" value="10" id="op_dry_1" required onclick="opFormas(1)">
                                                             </td>
                                                             <td class="car-nombre"><label for="op_dry_1" style="cursor:pointer" onclick="opFormas(1)">Retiro en Local</label></td>
                                                             <td class="car-precio">$ 0</td>
                                                         </tr>
                                                         <tr>
                                                             <td class="hidden-xs">
-                                                                <input type="radio" name="entrega" value="10" id="op_dry_2">
+                                                                <input type="radio" name="entrega" value="10" id="op_dry_2" onclick="opFormas(2)">
                                                             </td>
                                                             <td class="car-nombre"><label for="op_dry_2" style="cursor:pointer" onclick="opFormas(2)">Coordinar con el vendedor</label></td>
                                                             <td class="car-precio">$ 0</td>
                                                         </tr>
                                                         <tr>
                                                             <td class="hidden-xs">
-                                                                <input type="radio" name="entrega" value="10" id="op_dry_3">
+                                                                <input type="radio" name="entrega" value="10" id="op_dry_3" onclick="opFormas(3)">
                                                             </td>
                                                             <td class="car-nombre"><label for="op_dry_3" style="cursor:pointer" onclick="opFormas(3)">Envio a domicilio</label></td>
                                                             <td class="car-precio">$ 800</td>
@@ -218,19 +218,19 @@
                                                         </tr>
                                                         <tr>
                                                             <td class="hidden-xs">
-                                                                <input type="radio" name="pago" value="10" id="op_fp_1" required>
+                                                                <input type="radio" name="pago" value="10" id="op_fp_1" required onclick="opFormas(4)">
                                                             </td>
                                                             <td class="car-nombre"><label for="op_fp_1" style="cursor:pointer" onclick="opFormas(4)">Efectivo</label></td>
                                                         </tr>
                                                         <tr>
                                                             <td class="hidden-xs">
-                                                                <input type="radio" name="pago" value="10" id="op_fp_2">
+                                                                <input type="radio" name="pago" value="10" id="op_fp_2" onclick="opFormas(5)">
                                                             </td>
                                                             <td class="car-nombre"><label for="op_fp_2" style="cursor:pointer" onclick="opFormas(5)">Transferencia Bancaria</label></td>
                                                         </tr>
                                                         <tr>
                                                             <td class="hidden-xs">
-                                                                <input type="radio" name="pago" value="10" id="op_fp_3">
+                                                                <input type="radio" name="pago" value="10" id="op_fp_3" onclick="opFormas(6)">
                                                             </td>
                                                             <td class="car-nombre"><label for="op_fp_3" style="cursor:pointer" onclick="opFormas(6)">Coordinar con el vendedor</label></td>
                                                         </tr>
